Fixed z-index

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,7 +6,7 @@
 		filter: hue-rotate(360deg);
 	}
 }
-
+@import '../../variables.scss';
 .wrapper {
 	position: fixed;
 	top: 0;
@@ -37,7 +37,9 @@
 				position: relative;
 				line-height: 50px;
 				transition: all 0.3s ease;
-				
+				&:hover{
+					color: $amber;
+				}
 			}
 		}
 	}
@@ -61,7 +63,7 @@
 }
 .menu-btn {
 	position: fixed;
-	z-index: 2;
+	z-index: 3;
 	right: 20px;
 	top: 20px;
 	height: 50px;
@@ -83,7 +85,7 @@ input[type="checkbox"] {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	z-index: -1;
+	z-index: 2;
 	text-align: center;
 	width: 100%;
 	color: #202020;
